--- a/css/style.css
+++ b/css/style.css
@@ -160,15 +160,14 @@ nav {
 
 .intro-img {
   position: relative;
-  background: url(/personal-project/furni-1.0.0/images/dots-light.svg) no-repeat
-    center center/cover;
+  background: url(/furni-1.0.0/images/dots-light.svg) no-repeat center
+    center/cover;
   height: 250px;
   width: 250px;
 }
 
 .couch {
-  background: url(/personal-project/furni-1.0.0/images/couch.png) no-repeat
-    center center/cover;
+  background: url(/furni-1.0.0/images/couch.png) no-repeat center center/cover;
   position: absolute;
   right: 0;
   top: -4.2rem;
