--- a/css/style.css
+++ b/css/style.css
@@ -315,8 +315,7 @@ nav {
 }
 
 .third-section-image-bg {
-  background: url(/personal-project/furni-1.0.0/images/dots-yellow.svg)
-    no-repeat center center/cover;
+  background: url(../images/dots-yellow.svg) no-repeat center center/cover;
   height: 250px;
   width: 250px;
 
@@ -345,8 +344,7 @@ nav {
 }
 
 .fourth-section {
-  background: url(/personal-project/furni-1.0.0/images/dots-green.svg) no-repeat
-    center center/cover;
+  background: url(../images/dots-green.svg) no-repeat center center/cover;
   height: 250px;
   width: 30%;
   transform: translateY(-70px);
